--- a/index.html
+++ b/index.html
@@ -29,8 +29,42 @@
         <h1>iPhone 17 Pro</h1>
         <h4>All out Pro.</h4>
         <div id="btn">
-            <button id="btn1">Learn More</button>
-            <button id="btn2">Buy</button>
+            <button class="btn1">Learn More</button>
+            <button class="btn2">Buy</button>
+        </div>
+       </div>
+       <div id="iphoneair">
+        <h2>iPhone Air</h2>
+        <h4>The thinnest iPhone ever. <br> With the power of pro inside.</h4>
+        <div id="links">
+            <button class="btn1">Learn more</button>
+            <button class="btn2">Buy</button>
+        </div>
+       </div>
+       <div id="iphone17">
+        <h2>iPhone17</h2>
+        <h4>Magichromatic</h4>
+        <div id="i17btn">
+            <button class="btn1">Learn More</button>
+            <button class="btn2">Buy</button>
+        </div>
+       </div>
+       <div id="pro">
+        <div id="watch">
+            <h6><i class="ri-apple-fill"></i><b>WATCH</b> SERIES 11</h6>
+            <p>The ultimate way to watch your health</p>
+            <div id="btnn">
+                <button class="btn1">Learn More</button>
+                <button class="btn2">Buy</button>
+            </div>
+        </div>
+        <div id="airpod">
+            <h6><b>AirPods Pro 3</b></h6>
+            <p>The world's best in-ear <br> Active Noise Cancellation</p>
+            <div id="btnssss">
+                <button class="btn1">Learn More</button>
+                <button class="btn2">Buy</button>
+            </div>
         </div>
        </div>
 
